# credit-card-statement-extractor

./: CLAUDE.md  README.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/extensions/git/: git-config.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
credit_card_extractor/: cli.py  exporters.py  extractor.py  heuristics.py  i18n.py  models.py  normalizer.py  parser.py
specs/001-python-project-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-python-project-setup/checklists/: requirements.md
specs/002-pdf-reader/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-pdf-reader/checklists/: requirements.md
specs/002-pdf-reader/contracts/: cli-contract.md
specs/003-extract-transactions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-extract-transactions/checklists/: requirements.md
specs/003-extract-transactions/contracts/: cli-contract.md
specs/004-export-csv-xlsx/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-export-csv-xlsx/checklists/: requirements.md
specs/004-export-csv-xlsx/contracts/: cli-contract.md
specs/005-update-readme/: plan.md  spec.md  tasks.md
specs/005-update-readme/checklists/: requirements.md
src/credit_card_statement_extractor/pdf_reader/: __init__.py  __main__.py  _pdfplumber_reader.py  (+1 more)
tests/: conftest.py  test_cli.py  test_exporters.py  test_heuristics.py  test_normalizer.py  test_smoke.py
(+22 files in other folders)
