[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "credit-card-extractor"
version = "0.1.0"
description = "Extract credit card statement transactions from PDF to CSV/Excel"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "typer>=0.12",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
]

[project.scripts]
ccextract = "credit_card_extractor.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
