[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "credit-card-statement-extractor"
version = "0.1.0"
description = "Extract and parse credit card statements"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
xlsx = ["xlsxwriter>=3.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/credit_card_statement_extractor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
